--- a/loanCalculator/index.html
+++ b/loanCalculator/index.html
@@ -8,6 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <style>
+      #loader, #results {
+        display:none
+      }
+    </style>
+
     <title>Loan Calculator</title>
   </head>
   <body class="bg-dark">
@@ -41,9 +47,9 @@
               </div>
             </form>
             <!-- LOADER -->
-            <!-- <div id="loader">
+            <div id="loader">
               <img src="img/loading.gif" alt="">
-            </div> -->
+            </div>
             <!-- RESULTS -->
             <div id="results">
               <h5>Results</h5>
