--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="udemy-modern-js-course/">
     <title>Modern JS Udemy Course Projects</title>
 </head>
 <body>
