--- a/index.htm
+++ b/index.htm
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="https://stephencavender.github.io/udemy-modern-js-course/">
     <title>Modern JS Udemy Course Projects</title>
 </head>
 <body>
     <ul>
-        <li><a href="/tasklist/">Task List</a></li>
-        <li><a href="/loanCalculator/">Loan Calculator</a></li>
-        <li><a href="/numberGuesser/">Number Guesser</a></li>
+        <li><a href="udemy-modern-js-course/tasklist/">Task List</a></li>
+        <li><a href="udemy-modern-js-course/loanCalculator/">Loan Calculator</a></li>
+        <li><a href="udemy-modern-js-course/numberGuesser/">Number Guesser</a></li>
     </ul>
 </body>
 </html>
