--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="udemy-modern-js-course/tasklist/">Task List</a></li>
-        <li><a href="udemy-modern-js-course/loanCalculator/">Loan Calculator</a></li>
-        <li><a href="udemy-modern-js-course/numberGuesser/">Number Guesser</a></li>
+        <li><a href="tasklist/">Task List</a></li>
+        <li><a href="loanCalculator/">Loan Calculator</a></li>
+        <li><a href="numberGuesser/">Number Guesser</a></li>
     </ul>
 </body>
 </html>
