add deploy dependencies and home page

--- a/src/index.htm
+++ b/src/index.htm
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="/tasklist/">Task List</a></li>
-        <li><a href="/loanCalculator/">Loan Calculator</a></li>
-        <li><a href="/numberGuesser/">Number Guesser</a></li>
+        <li><a href="tasklist/">Task List</a></li>
+        <li><a href="loanCalculator/">Loan Calculator</a></li>
+        <li><a href="numberGuesser/">Number Guesser</a></li>
     </ul>
 </body>
 </html>
